Header spacing fix

--- a/src/components/organisms/Header/header.organism.module.scss
+++ b/src/components/organisms/Header/header.organism.module.scss
@@ -31,6 +31,16 @@
     justify-content: center;
     align-items: center;
 
+    &.landingPage {
+      padding-left: 40px;
+      padding-right: 40px;
+
+      @include lg() {
+        padding-left: 70px;
+        padding-right: 70px;
+      }
+    }
+
     .logo {
       align-self: flex-start;
       width: 88px;
