--- a/src/components/organisms/Vault/vault.organism.module.scss
+++ b/src/components/organisms/Vault/vault.organism.module.scss
@@ -79,6 +79,7 @@
         font-weight: 400;
         padding-bottom: 0;
         padding-left: 5px;
+        min-width: 84px;
       }
 
       td {
